28-June-2011 Michael Babker Version 1.8 Changes
# Joomla! 1.6.4 security fix
+ Added pagination to list layout

22-June-2011 Michael Babker Version 1.8 Changes
+ Added JHtmlIcon helper for front end
~ Made consistent JEXEC checks
# Changed com_podcastmedia to delete menus on postflight (again)
+ Add PodcastManagerHelperRoute

20-June-2011 Michael Babker Version 1.8 Changes
+ Rough addition of front end HTML view for feeds
~ Cleanup of the HTML view

19-June-2011 Michael Babker Version 1.7 Changes
~ Optimize media manager navigation for Joomla! 1.7
# Add a missing language string for the File Manager
~ Convert toolbar tasks from JToolBarHelper::custom to defined tasks as appropriate
~ Add a check to the scriptfiles for Joomla! 1.7
~ Mark the XML files for Joomla! 1.7
- Removed the Hathor media view override
# Corrected the Hathor overrides update check
~ Syncronized core layouts to current Joomla! SVN
~ Updated PodcastManagerModelFeeds to use modified methods from MenusModelMenus