@@ -4,7 +4,7 @@
 *
 * @copyright	Copyright (C) 2011 Michael Babker. All rights reserved.
 * @license		GNU/GPL - http://www.gnu.org/copyleft/gpl.html
-* 
+*
 * Podcast Manager is based upon the ideas found in Podcast Suite created by Joe LeBlanc
 * Original copyright (c) 2005 - 2008 Joseph L. LeBlanc and released under the GPLv2 license
 */
@@ -96,7 +96,7 @@ class JFormFieldPodcastMedia extends JFormField
 			array_pop($folder);
 			$folder = implode('/',$folder);
 		}
-		elseif (file_exists(JPATH_ROOT.'/media/com_podcastmanager/'.$directory)) {
+		elseif (file_exists(JPATH_ROOT.'/'.JComponentHelper::getParams('com_podcastmedia')->get('file_path', 'media/com_podcastmanager'.'/'.$directory))) {
 			$folder = $directory;
 		}
 		else {
